--- a/pag002.html
+++ b/pag002.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <img class="kirito" scr="img/wp2458384.jpg" alt="Kirito">
+    <img class="the100" scr="the100.jpg" alt="the100">
 </body>
 </html>
